--- a/app/src/main/res/layout/top_ui_joystick.xml
+++ b/app/src/main/res/layout/top_ui_joystick.xml
@@ -1,7 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.mumu.locationmocker.service.JoystickView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/joystickView"
-    android:layout_width="100dp"
-    android:layout_height="100dp"
-    android:layout_centerInParent="true" />
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:animateLayoutChanges="true"
+    android:background="@drawable/rounded_bg_layout">
+
+    <com.mumu.locationmocker.service.JoystickView
+        android:id="@+id/joystickView"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:clickable="true"
+        android:layout_width="200dp"
+        android:layout_height="200dp" />
+
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_below="@+id/joystickView"
+        android:text="XXXXX" />
+
+</RelativeLayout>
