--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,12 +39,30 @@
             app:srcCompat="@drawable/ic_circle" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonMapView"
+            android:id="@+id/buttonCancelMock"
             style="@style/Widget.MaterialComponents.Button.Icon"
             android:layout_width="match_parent"
             android:layout_height="72dp"
             android:layout_below="@+id/imageViewCircleGl22"
             android:layout_marginTop="20dp"
+            android:background="#c1d5e0"
+            android:gravity="start|center_vertical"
+            android:text="@string/home_activity_stop_mock"
+            android:textAllCaps="false"
+            android:textAppearance="@style/TextAppearance.AppCompat.Button"
+            android:textColor="#FFFFFF"
+            android:textSize="16sp"
+            app:cornerRadius="8sp"
+            app:icon="@drawable/baseline_sports_esports_24"
+            app:iconPadding="10sp"
+            app:iconSize="36dp" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/buttonMapView"
+            style="@style/Widget.MaterialComponents.Button.Icon"
+            android:layout_width="match_parent"
+            android:layout_height="72dp"
+            android:layout_below="@+id/buttonCancelMock"
             android:background="#c1d5e0"
             android:gravity="start|center_vertical"
             android:text="@string/home_activity_open_map"
