implement single location tracker to manage real location

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,8 @@
             android:layout_height="72dp"
             android:layout_below="@+id/imageViewCircleGl22"
             android:layout_marginTop="20dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
             android:background="#c1d5e0"
             android:gravity="start|center_vertical"
             android:text="@string/home_activity_stop_mock"
@@ -58,11 +60,33 @@
             app:iconSize="36dp" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/buttonMapView"
+            android:id="@+id/buttonEnableDebug"
             style="@style/Widget.MaterialComponents.Button.Icon"
             android:layout_width="match_parent"
             android:layout_height="72dp"
             android:layout_below="@+id/buttonCancelMock"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
+            android:background="#c1d5e0"
+            android:gravity="start|center_vertical"
+            android:text="@string/home_activity_enable_debug"
+            android:textAllCaps="false"
+            android:textAppearance="@style/TextAppearance.AppCompat.Button"
+            android:textColor="#FFFFFF"
+            android:textSize="16sp"
+            app:cornerRadius="8sp"
+            app:icon="@drawable/ic_map_teleport"
+            app:iconPadding="10sp"
+            app:iconSize="36dp" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/buttonMapView"
+            style="@style/Widget.MaterialComponents.Button.Icon"
+            android:layout_width="match_parent"
+            android:layout_height="72dp"
+            android:layout_below="@+id/buttonEnableDebug"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
             android:background="#c1d5e0"
             android:gravity="start|center_vertical"
             android:text="@string/home_activity_open_map"
@@ -81,6 +105,8 @@
             android:layout_width="match_parent"
             android:layout_height="72dp"
             android:layout_below="@+id/buttonMapView"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
             android:background="#c1d5e0"
             android:gravity="start|center_vertical"
             android:text="@string/home_activity_start_service"
