add fourth button in top ui

--- a/app/src/main/res/layout/top_ui_main.xml
+++ b/app/src/main/res/layout/top_ui_main.xml
@@ -68,7 +68,7 @@
                 android:textAllCaps="false"
                 android:textAppearance="@style/TextAppearance.AppCompat.Button"
                 app:cornerRadius="50dp"
-                app:icon="@drawable/baseline_edit_note_24"
+                app:icon="@drawable/ic_one"
                 app:iconGravity="textStart"
                 app:iconPadding="0dp"
                 app:iconSize="36dp" />
@@ -100,7 +100,31 @@
                 android:textAllCaps="false"
                 android:textAppearance="@style/TextAppearance.AppCompat.Button"
                 app:cornerRadius="50dp"
-                app:icon="@drawable/ic_menu_home_outline"
+                app:icon="@drawable/map_24px"
+                app:iconGravity="textStart"
+                app:iconPadding="0dp"
+                app:iconSize="30dp" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_fourth"
+                style="@style/Widget.MaterialComponents.Button.Icon"
+                android:contentDescription="@string/app_name"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_toEndOf="@id/button_third"
+                android:insetLeft="0dp"
+                android:insetTop="0dp"
+                android:insetRight="0dp"
+                android:insetBottom="0dp"
+                android:padding="0dp"
+                android:textAllCaps="false"
+                android:textAppearance="@style/TextAppearance.AppCompat.Button"
+                app:cornerRadius="50dp"
+                app:icon="@drawable/ic_egg_enabled"
                 app:iconGravity="textStart"
                 app:iconPadding="0dp"
                 app:iconSize="30dp" />
@@ -158,6 +182,18 @@
                 android:paddingBottom="4dp"
                 android:gravity="center"
                 android:text="inst_third" />
+
+            <TextView
+                android:id="@+id/textview_inst_fourth"
+                android:layout_width="58dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/button_fourth"
+                android:layout_marginStart="12dp"
+                android:layout_toEndOf="@+id/textview_inst_third"
+                android:maxLines="2"
+                android:paddingBottom="4dp"
+                android:gravity="center"
+                android:text="inst_fourth" />
         </RelativeLayout>
     </ScrollView>
 </RelativeLayout>
